test/vectorLiteral2.slq

def foo(xs:ğ”¹^3,y:ğ”¹)â‡’(xs,y);

def main(){
	xs:=[0:ğ”¹,1:ğ”¹,0:!ğ”¹];
	y:=xs[2]:!ğ”¹; // error
	(xs,y):=foo(xs,y);
	return (xs,y);
}
